...
			headerRight: () =>
				(!maxUsers || showButton || (isGroupChat() && users.length > 1)) && (
					<HeaderButton.Container>
						<HeaderButton.Item
							title={users.length > 0 ? buttonTextHeader : I18n.t('Skip')}
							onPress={nextActionHeader}
							testID='selected-users-view-submit'
						/>
					</HeaderButton.Container>
				)
		};
		navigation.setOptions(options);
	}, [navigation, users.length, maxUsers]);
...

	const searchOrChats = (search.length > 0 ? search : chats) as ISelectedUser[];
	// filter DM between multiple users
	const data = searchOrChats.filter(sub => !isGroupChatMethod(sub));

	return (
		<SafeAreaView testID='select-users-view'>
			<StatusBar />
			<FlatList
				data={data}
				keyExtractor={item => item._id}
				renderItem={({ item }) => {
					const name = useRealName && item.fname ? item.fname : item.name;
...
